added all new stuff to this porfolio

--- a/index.html
+++ b/index.html
@@ -11,6 +11,44 @@
     <H1>
         My Portfolio
     </H1>
+    <div>
+      <h1>Daniel Gutierrez</h1>
+      <h2>Software Developer </h2>
+      <hr>  
+      <p>My <i>favorite</i> thing to do is play video games. </p>
+      <img alt="a picutre of diamond rank symbol in the game of Valorant."
+      src="image/diamond.jpg" alt="My logo" 
+      style="height:100" style="width:100">
+    <h3>About Me</h3>
+  <h3>I'm baby post-ironic selfies trust fund XOXO venmo chillwave vegan semiotics kombucha thundercats cornhole readymade VHS tbh YOLO.Franzen kogi DSA occupy umami meggings. Single-origin coffee gluten-free hella,
+     palo santo kogi banjo hammock shabby chic lumbersexual. Raw denim skateboard af adaptogen lo-fi master cleanse forage slow-carb lomo waistcoat.
+  </h3>
+
+  
+<H3> My Projects </H3>
+<ul>
+  <li> Project 1</li>
+<li>Project 2 </li>
+<li> Project 3</li>
+</ul>
+
+<h3>Contact Me</h3>
+<p> 
+Phone Number : (725)800-1223
+
+Email :<a href> daniel.website@aol.com</a>
+
+
+
+</p>
+
+
+
+    </div>
+
+
+
+
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
