fixed my html now ready for CSS edits

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      palo santo kogi banjo hammock shabby chic lumbersexual. Raw denim skateboard af adaptogen lo-fi master cleanse forage slow-carb lomo waistcoat.
   </h3>
 
-  
+
 <H3> My Projects </H3>
 <ul>
   <li> Project 1</li>
@@ -34,13 +34,13 @@
 
 <h3>Contact Me</h3>
 <p> 
-Phone Number : (725)800-1223
+Phone Number : <a href> 702 793 1092<a> </p>
+<div>
 
-Email :<a href> daniel.website@aol.com</a>
+</p>Email :<a href> daniel.website@aol.com</a></p>
 
+</div>
 
-
-</p>
 
 
 
