added to styles.css

--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html>
 
 <head>
+  <title>My Portfolio</title>
+
+  
+<link rel="stylesheet" type="text/css"   href="styles.css"/>
+
+
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>My Portfolio</title>
+    
 </head>
+
+
+</html>
 
 <body>
     <H1>
@@ -34,7 +44,7 @@
 
 <h3>Contact Me</h3>
 <p> 
-Phone Number : <a href> 702 793 1092<a> </p>
+Phone Number : <a href> 702 793 1092</a> </p>
 <div>
 
 </p>Email :<a href> daniel.website@aol.com</a></p>
